--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -1,3 +1,6 @@
+﻿.mensaje{
+    display:none;
+}
 .gris{
     filter: grayscale(0); /* Color */
     filter: grayscale(0.5); /* 50% color */
@@ -14,12 +17,12 @@
     transition:all 4s;
 }
 .transparente{
-     opacity: 0;
-     transition:all 4s;
+    opacity: 0;
+    transition:all 4s;
 }
 .semitransparente{
-     opacity: 0.3;
-     transition:all 4s;
+    opacity: 0.3;
+    transition:all 4s;
 }
 .aparecer{
     opacity: 1;
@@ -90,71 +93,69 @@
     transition: all 5s;
 }
 .estrofa2{
-position:fixed;
-left:50%;
-top:70%;
-font-size:3vw;
-z-index: 90;
+    position:fixed;
+    left:50%;
+    top:70%;
+    font-size:3vw;
+    z-index: 90;
 }
 .estrofa3{
-position:fixed;
-left:5%;
-top:10%;
-font-size:4vw;
+    position:fixed;
+    left:5%;
+    top:10%;
+    font-size:4vw;
 }
 .estrofa4{
-position:fixed;
-left:40%;
-top:60%;
-font-size:3vw;
-z-index: 90;
+    position:fixed;
+    left:40%;
+    top:60%;
+    font-size:3vw;
+    z-index: 90;
 }
 .estrofa5{
-position:fixed;
-left:5%;
-top:10%;
-font-size:3vw;
+    position:fixed;
+    left:5%;
+    top:10%;
+    font-size:3vw;
 }
 .estrofa6{
-position:fixed;
-left:13%;
-top:13%;
-font-size:3vw;
+    position:fixed;
+    left:13%;
+    top:13%;
+    font-size:3vw;
 }
 .estrofa7{
-position:fixed;
-left:15%;
-top:15%;
-font-size:3vw;
+    position:fixed;
+    left:15%;
+    top:15%;
+    font-size:3vw;
 }
 .estrofa9{
-position:fixed;
-left:´11%;
-top:12%;
-font-size:3vw;
+    position:fixed;
+    left:´11%;
+    top:12%;
+    font-size:3vw;
 }
 .estrofa1{
-position:fixed;
-left:50%;
-top:70%;
-font-size:3vw;
+    position:fixed;
+    left:50%;
+    top:70%;
+    font-size:3vw;
 }
-
 .colibrigif{
-width: 90%;   
-z-index: 50;
+    width: 90%;
+    z-index: 50;
 }
 .inicio{
-position:fixed;
-left:60%;
-top: 20%;
+    position:fixed;
+    left:60%;
+    top: 20%;
 }
 .final{
     position:fixed;
-
-left:39%;
-top: 55%;
-transition: all 3s;
+    left:39%;
+    top: 55%;
+    transition: all 3s;
 }
 .icono{
     width: 7%;
@@ -171,7 +172,7 @@ transition: all 3s;
 .numeros{
     width: 15%;
     position: absolute;
-    left: 95%;   
+    left: 95%;
 }
 .muysccubun{
     width: 8%;
@@ -184,35 +185,32 @@ transition: all 3s;
     text-align: center;
     color: darkred;
     font-family: cursive;
-    background-image: url(../imagenes/fondo2.jpg);    
+    background-image: url(../imagenes/fondo2.jpg);
 }
 .nina{
-      width: 18%;
+    width: 18%;
     position: absolute;
     left: 17%;
-    
+
 }
 .planeta{
-      width: 15%;
+    width: 15%;
     position: absolute;
     right: 50%;
     top: 10vw;
 }
-
 .arcoiris{
-      width: 88%;
+    width: 88%;
     position: absolute;
     left: 25%;
-bottom: -10%;
+    bottom: -10%;
 }
-/*hola*/
 .colibri2{
     width: 7%;
     position: absolute;
-     top: 16vw;
+    top: 16vw;
     right: 94%;
 }
-
 .coli3{
     width: 7%;
     position: absolute;
@@ -220,139 +218,128 @@ bottom: -10%;
     right: 65%;
 }
 .arcoiris2{
-      width: 88%;
+    width: 88%;
     position: absolute;
     left: 25%;
-    bottom: -68%; 
+    bottom: -68%;
     z-index:10;
 }
 #colibri{
-   z-index: 90; 
+   z-index: 90;
 }
 .derecha{
     z-index: 90;
 }
-
 .papagayo1{
- width: 27%;
-   
+    width: 27%;
 }
 .inicio{
-position:fixed;
-left: 50%;
-top: 3%;
-z-index: 90;
+    position:fixed;
+    left: 50%;
+    top: 3%;
+    z-index: 90;
 }
 .final{
     position:fixed;
-
-left:39%;
-top: 55%;
-transition: all 3s;
-z-index: 90;
+    left:39%;
+    top: 55%;
+    transition: all 3s;
+    z-index: 90;
 }
 .caballo1{
- width: 27%;
-   
+    width: 27%;
 }
 .inicio{
-position:fixed;
-left: 50%;
-top: 3%;
-z-index: 90;
+    position:fixed;
+    left: 50%;
+    top: 3%;
+    z-index: 90;
 }
 .final{
     position:fixed;
-
-left:39%;
-top: 55%;
-transition: all 3s;
-z-index: 90;
+    left:39%;
+    top: 55%;
+    transition: all 3s;
+    z-index: 90;
 }
 .buho1{
- width: 27%;
-   
+    width: 27%;
 }
 .inicio{
-position:fixed;
-left: 50%;
-top: 3%;
-z-index: 90;
+    position:fixed;
+    left: 50%;
+    top: 3%;
+    z-index: 90;
 }
 .final{
     position:fixed;
 
-left:39%;
-top: 55%;
-transition: all 3s;
-z-index: 90;
+    left:39%;
+    top: 55%;
+    transition: all 3s;
+    z-index: 90;
 }
 .lebiqueronda{
-color:firebrick;
-font-family:sans-serif;
-position:absolute;
-left: 50%;
-top: 9vh;
-transform: translate(-50%);
-font-size: 3vw;
-transition: all 5s;
-    
+    color:firebrick;
+    font-family:sans-serif;
+    position:absolute;
+    left: 50%;
+    top: 9vh;
+    transform: translate(-50%);
+    font-size: 3vw;
+    transition: all 5s;
 }
 .lebiquezoom{
-color:darkorange;
-font-family:sans-serif;
-position: absolute;
-left: 50%;
-top: 10vh;
-transform: translate(-50%);
-font-size: 10vw;
-transition: all 5s;
-margin-top: 0;
+    color:darkorange;
+    font-family:sans-serif;
+    position: absolute;
+    left: 50%;
+    top: 10vh;
+    transform: translate(-50%);
+    font-size: 10vw;
+    transition: all 5s;
+    margin-top: 0;
 }
 .poeta{
-width: 9%;
-position: absolute;
-right: 15vw;
-bottom: 10vh;   
+    width: 9%;
+    position: absolute;
+    right: 15vw;
+    bottom: 10vh;
 }
-
 .ronda{
-width: 10%;
-position: absolute;
-left: 50%;
-transform: translate(-50%);
-bottom: 10vh;    
+    width: 10%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 10vh;
 }
-
 .lebique{
-width: 10.5%;
-position: absolute;
-left: 14vw;
-bottom: 8vh;    
+    width: 10.5%;
+    position: absolute;
+    left: 14vw;
+    bottom: 8vh;
 }
-
 .colibriprincipal{
-width: 15%;
-position: absolute;
-right: 70%;
-top: 6vw;    
+    width: 15%;
+    position: absolute;
+    right: 70%;
+    top: 6vw;
 }
 .iconoinicio{
-width: 8%;
-position: absolute;
-right: 2%;
-top: 2vw;
+    width: 8%;
+    position: absolute;
+    right: 2%;
+    top: 2vw;
 }
 .muysccubun{
-width: 11.5%;
-position: absolute;
-left: 30vw;
-bottom: 36vh;
+    width: 11.5%;
+    position: absolute;
+    left: 30vw;
+    bottom: 36vh;
 }
 .español{
-width: 10.5%;
-position: absolute;
-right: 30vw;
-bottom: 35vh;
+    width: 10.5%;
+    position: absolute;
+    right: 30vw;
+    bottom: 35vh;
 }
-
